--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WanderLa</title>
-</head>
+</head> -->
+<% layout('/layouts/boilerplate') %>
 <body>
     <h3>All Listings</h3>
-    <form method="get" action="/listings/new">
+    <!-- <form method="get" action="/listings/new">
         <button>Create New Listing</button>
-    </form>
+    </form> -->
     <ul>
         <%for(listing of allListings){%>
         <li><a href="/listings/<%=listing._id%>"><%=listing.title%></a></li>
         <% } %>
     </ul>
 </body>
-</html>
+<!-- </html> -->
