--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -6,15 +6,32 @@
     <title>WanderLa</title>
 </head> -->
 <% layout('/layouts/boilerplate') %>
-<body>
-    <h3>All Listings</h3>
-    <!-- <form method="get" action="/listings/new">
+
+    <body>
+        <h3>All Listings</h3>
+        <!-- <form method="get" action="/listings/new">
         <button>Create New Listing</button>
     </form> -->
-    <ul>
-        <%for(listing of allListings){%>
-        <li><a href="/listings/<%=listing._id%>"><%=listing.title%></a></li>
-        <% } %>
-    </ul>
-</body>
-<!-- </html> -->
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+            <%for(listing of allListings){%>
+                <a href="/listings/<%=listing._id%>" class="listing-link">
+                    <div class="card col">
+                        
+                            <img class="card-img-top" src="<%=listing.image.url%>" alt="listing_image"
+                                style="height: 20rem;">
+                                <div class="card-img-overlay"></div>
+                        <div class="card-body">
+                            <p class="card-text">
+                                <b>
+                                    <%=listing.title%>
+                                </b> <br>
+                                &#8377;<%= listing.price.toLocaleString("en-In") %> / night
+                            </p>
+                        </div>
+                    </div>
+                </a>
+                <% } %>
+        </div>
+
+    </body>
+    <!-- </html> -->
