--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,14 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
     /* font-weight: <weight>; */
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 
+}
+
+.container{
+    flex: 1;
 }
 
 /* Navbar */
@@ -12,6 +19,10 @@ body {
     background-color: white;
 }
 
+.add-btn{
+    border: none;
+    background-color: #fe424d;
+}
 .fa-compass {
     color: #fe424d;
     font-size: 2rem;
