--- a/public/css/style.css
+++ b/public/css/style.css
@@ -97,3 +97,21 @@ body {
     opacity: 0.2;
     background-color: white;
 }
+/* SHOW PAGE */
+.show-img{
+    height: 30vh;
+}
+
+.btns{
+    display: flex;
+}
+
+.edit-btn{
+    height: 37px;
+}
+
+.show-card{
+    padding-left: 0;
+    padding-right: 0;
+
+}
