--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -6,20 +6,34 @@
     <title>WanderLa</title>
 </head> -->
 <% layout('/layouts/boilerplate') %>
-<body>
-    <h3>Listing Details : </h3>
-    <ul>
-        <li><%= listing.title %></li>
-        <li><%= listing.description %></li>
-        <li>&#8377;<%= listing.price.toLocaleString("en-In") %></li>
-        <li><%= listing.location %></li>
-        <li><%= listing.country %></li>
-    </ul>
-    <br>
-    <a href="/listings/<%=listing._id %>/edit">Edit this Listing</a>
-    <br><br>
-    <form method="post" action="/listings/<%=listing.id%>?_method=DELETE">
-        <button>Delete</button>
-    </form>
-</body>
-<!-- </html> -->
+
+    <body>
+        <div class="row mt-3">
+            <div class="col-8 offset-3">
+                <h3>Listing Details : </h3>
+            </div>
+            <div class="card col-6 offset-3">
+                <img src="<%= listing.image.url %>" class="card-img-top show-img show-card" alt="Listing_image">
+                <div class="card-body">
+                    <p class="card-text">
+                        <b>
+                            <%= listing.title %>
+                        </b> <br>
+                        <%= listing.description %> <br>
+                            &#8377; <%= listing.price.toLocaleString("en-In") %> <br>
+                                <%= listing.location %> <br>
+                                    <%= listing.country %>
+                    </p>
+                </div>
+            </div>
+            <br>
+            <div class="btns">
+                <a  href="/listings/<%=listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+                <br><br>
+                <form method="post" action="/listings/<%=listing.id%>?_method=DELETE">
+                    <button class="btn btn-dark offset-5">Delete</button>
+                </form>
+            </div>
+        </div>
+    </body>
+    <!-- </html> -->
